Added Jacoco test coverage reporting

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
 
 	<properties>
 		<java.version>11</java.version>
+		<jacoco.version>0.8.5</jacoco.version>
+		<jacoco.branch.coverage.threshold>0</jacoco.branch.coverage.threshold>
+		<jacoco.line.coverage.threshold>0</jacoco.line.coverage.threshold>
 	</properties>
 
 	<dependencies>
@@ -88,6 +91,54 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>${jacoco.version}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>check</id>
+						<goals>
+							<goal>check</goal>
+						</goals>
+                        <configuration>
+							<excludes>
+								<exclude>**/redintro/*/SecurityConfig.class</exclude>
+							</excludes>
+							<dataFile>target/jacoco.exec</dataFile>
+                            <rules>
+								<rule>
+									<element>CLASS</element>
+									<limits>
+										<limit>
+											<counter>LINE</counter>
+											<value>COVEREDRATIO</value>
+											<minimum>${jacoco.line.coverage.threshold}</minimum>
+										</limit>
+										<limit>
+											<counter>BRANCH</counter>
+											<value>COVEREDRATIO</value>
+											<minimum>${jacoco.branch.coverage.threshold}</minimum>
+										</limit>
+									</limits>
+								</rule>
+							</rules>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
