--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -13,3 +13,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.liquibase.contexts=dev
 spring.liquibase.change-log=classpath:db/liquibase-changelog.xml
+
+management.endpoints.web.exposure.include=*
