--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 logging.level.root=INFO
 
-springdoc.api-docs.path=/api-docs
+info.app.name=HexBike
+info.app.description=Demo ports and adapters project
+info.app.version=0.0.1-SNAPSHOT
