--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,8 @@
 	<properties>
 		<java.version>11</java.version>
 		<jacoco.version>0.8.5</jacoco.version>
-		<jacoco.branch.coverage.threshold>0%</jacoco.branch.coverage.threshold>
-		<jacoco.line.coverage.threshold>0%</jacoco.line.coverage.threshold>
+		<jacoco.branch.coverage.threshold>100%</jacoco.branch.coverage.threshold>
+		<jacoco.line.coverage.threshold>100%</jacoco.line.coverage.threshold>
 		<jjwt.version>0.9.1</jjwt.version>
 		<liquibase.core.version>3.8.7</liquibase.core.version>
 		<liquibase-maven-plugin.version>3.4.1</liquibase-maven-plugin.version>
@@ -26,6 +26,7 @@
 		<postgresql.version>42.2.10</postgresql.version>
 		<springdoc.openapi-ui.version>1.2.32</springdoc.openapi-ui.version>
 		<commons.io.version>2.7</commons.io.version>
+		<skipItTests>true</skipItTests>
 	</properties>
 
 	<dependencies>
@@ -69,19 +70,11 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>${postgresql.version}</version>
-			<!--
-			<scope>runtime</scope>
-			-->
 		</dependency>
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-ui</artifactId>
 			<version>${springdoc.openapi-ui.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -94,20 +87,12 @@
 			<artifactId>commons-io</artifactId>
 			<version>${commons.io.version}</version>
 		</dependency>
-		<!--
+        <!-- Test -->
 		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-api</artifactId>
-			<version>5.4.2</version>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-params</artifactId>
-			<version>5.4.2</version>
-			<scope>test</scope>
-		</dependency>
-		-->
 		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>testcontainers</artifactId>
@@ -142,17 +127,54 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>add-integration-test-source</id>
+						<phase>generate-test-sources</phase>
+						<goals>
+							<goal>add-test-source</goal>
+						</goals>
+						<configuration>
+							<sources>
+								<source>src/test-integration/java</source>
+							</sources>
+						</configuration>
+					</execution>
+					<execution>
+						<id>add-integration-test-resource</id>
+						<phase>generate-test-resources</phase>
+						<goals>
+							<goal>add-test-resource</goal>
+						</goals>
+						<configuration>
+							<resources>
+								<resource>
+									<directory>src/test-integration/resources</directory>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<excludes>
+						<exclude>**/*IT.java</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<!--
 				<configuration>
-					<skipTests>false</skipTests>
-					<rerunFailingTestsCount>3</rerunFailingTestsCount>
+					<skipTests>${skipItTests}</skipTests>
 					<includes>
 					  <include>**/*IT.java</include>
 					</includes>
 				</configuration>
-				-->
 				<executions>
 					<execution>
 						<goals>
