force filename use with liquibase cmdline

--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,3 +1,4 @@
+changeLogFile=src/main/resources/db/liquibase-changelog.xml
 url=jdbc:postgresql://localhost:5432/hexbike_dev
 username=docker
 password=docker
