Added back open-api config deleted in error

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ logging.level.root=INFO
 info.app.name=HexBike
 info.app.description=Demo ports and adapters project
 info.app.version=0.0.1-SNAPSHOT
+
+springdoc.api-docs.path=/api-docs
