Install bash to support debugging

--- a/deploy/app/Dockerfile
+++ b/deploy/app/Dockerfile
@@ -1,7 +1,8 @@
 FROM alpine:latest
 ENV REFRESHED_AT 05/07/18:48:00
 
-RUN apk --no-cache add openjdk11-jre
+RUN apk --no-cache add openjdk11-jre && \
+    apk --no-cache add bash
 
 WORKDIR /opt
 
