--- a/src/test-integration/resources/application-it.properties
+++ b/src/test-integration/resources/application-it.properties
@@ -9,7 +9,7 @@ spring.datasource.password=docker
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.liquibase.enabled=true
-spring.liquibase.contexts=it
+spring.liquibase.contexts=dev
 spring.liquibase.change-log=classpath:db/liquibase-changelog.xml
 
 management.endpoints.web.exposure.include=*
