--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,16 +1,21 @@
 logging.level.root=INFO
 
-spring.jpa.show-sql=true
-spring.jpa.open-in-view=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-spring.jpa.hibernate.ddl-auto=none
+management.endpoints.web.exposure.include=*
 
 spring.datasource.url=jdbc:postgresql://db_host:5432/hexbike_dev
 spring.datasource.username=docker
 spring.datasource.password=docker
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.open-in-view=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+
 spring.liquibase.change-log=classpath:db/liquibase-changelog.xml
 
-management.endpoints.web.exposure.include=*
+spring.redis.host=cache_host
+spring.redis.port=6379
+
+
+
