--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,6 +3,11 @@ logging.level.root=INFO
 # Disable liquibase for tests as we rely on H2 and JPA
 spring.liquibase.enabled=false
 
+spring.profiles.active=test
+
+spring.redis.host=localhost
+spring.redis.port=6379
+
 
 
 
