Consolodated properties files

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -8,6 +8,10 @@ spring.profiles.active=test
 spring.redis.host=localhost
 spring.redis.port=6379
 
+schedule.frequency.mytask=0 */1 * * * ?
+schedule.lock.name=mytask-execute
+schedule.lock.lockAtLeastFor=PT30S
+schedule.lock.lockAtMostFor=PT30S
 
 
 
