Split schedule configuration for dev and test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,33 @@
-logging.level.root=INFO
-
 info.app.name=HexBike
 info.app.description=Demo ports and adapters project
 info.app.version=0.0.1-SNAPSHOT
 
+logging.level.root=INFO
+
+management.endpoints.web.exposure.include=*
+
+schedule.frequency.mytask=0 */1 * * * ?
+schedule.lock.name=mytask-execute
+schedule.lock.lockAtLeastFor=PT30S
+schedule.lock.lockAtMostFor=PT30S
+
 springdoc.api-docs.path=/api-docs
+
+spring.datasource.url=jdbc:postgresql://db_host:5432/hexbike_dev
+spring.datasource.username=docker
+spring.datasource.password=docker
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.open-in-view=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+
+spring.liquibase.change-log=classpath:db/liquibase-changelog.xml
+
+spring.profiles.active=dev
+
+spring.redis.host=cache_host
+spring.redis.port=6379
+
+
