--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,10 @@
 logging.level.root=INFO
 
-# Disable liquibase for tests as we rely on H2 and JPA
+schedule.frequency.mytask=*/10 * * * * ?
+schedule.lock.name=mytask-execute
+schedule.lock.lockAtLeastFor=PT5S
+schedule.lock.lockAtMostFor=PT5S
+
 spring.liquibase.enabled=false
 
 spring.profiles.active=test
@@ -8,10 +12,7 @@ spring.profiles.active=test
 spring.redis.host=localhost
 spring.redis.port=6379
 
-schedule.frequency.mytask=0 */1 * * * ?
-schedule.lock.name=mytask-execute
-schedule.lock.lockAtLeastFor=PT30S
-schedule.lock.lockAtMostFor=PT30S
+
 
 
 
