Added scheduler properties metadata

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,9 +1,9 @@
 logging.level.root=INFO
 
-schedule.frequency.mytask=*/10 * * * * ?
+schedule.frequency.pattern=*/10 * * * * ?
 schedule.lock.name=mytask-execute
-schedule.lock.lockAtLeastFor=PT5S
-schedule.lock.lockAtMostFor=PT5S
+schedule.lock.atLeastFor=PT5S
+schedule.lock.atMostFor=PT5S
 
 spring.liquibase.enabled=false
 
