--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,10 @@ logging.level.root=INFO
 
 management.endpoints.web.exposure.include=*
 
-schedule.frequency.mytask=0 */1 * * * ?
+schedule.frequency.pattern=0 */1 * * * ?
 schedule.lock.name=mytask-execute
-schedule.lock.lockAtLeastFor=PT30S
-schedule.lock.lockAtMostFor=PT30S
+schedule.lock.atLeastFor=PT30S
+schedule.lock.atMostFor=PT30S
 
 springdoc.api-docs.path=/api-docs
 
