Removed integration tests for sheduled tasks as their value was questionable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,15 @@ info.app.name=HexBike
 info.app.description=Demo ports and adapters project
 info.app.version=0.0.1-SNAPSHOT
 
+io.redintro.scheduling.enabled=true
+io.redintro.scheduling.frequency.pattern=0 */1 * * * ?
+io.redintro.scheduling.lock.atLeastFor=PT30S
+io.redintro.scheduling.lock.atMostFor=PT30S
+io.redintro.scheduling.lock.nameSpace=hexbike
+
 logging.level.root=INFO
 
 management.endpoints.web.exposure.include=*
-
-schedule.frequency.pattern=0 */1 * * * ?
-schedule.lock.name=mytask-execute
-schedule.lock.atLeastFor=PT30S
-schedule.lock.atMostFor=PT30S
 
 springdoc.api-docs.path=/api-docs
 
