--- a/src/test-integration/resources/application-it.properties
+++ b/src/test-integration/resources/application-it.properties
@@ -1,5 +1,11 @@
 logging.level.root=INFO
 
+io.redintro.scheduling.enabled=false
+io.redintro.scheduling.frequency.pattern=0 */1 * * * ?
+io.redintro.scheduling.lock.atLeastFor=PT30S
+io.redintro.scheduling.lock.atMostFor=PT30S
+io.redintro.scheduling.lock.nameSpace=hexbike
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 
@@ -12,3 +18,6 @@ spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/liquibase-changelog.xml
 
 management.endpoints.web.exposure.include=*
+
+spring.redis.host=localhost
+spring.redis.port=6378
