--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,9 +1,10 @@
 logging.level.root=INFO
 
-schedule.frequency.pattern=*/10 * * * * ?
-schedule.lock.name=mytask-execute
-schedule.lock.atLeastFor=PT5S
-schedule.lock.atMostFor=PT5S
+io.redintro.scheduling.enabled=false
+io.redintro.scheduling.frequency.pattern=0 */1 * * * ?
+io.redintro.scheduling.lock.atLeastFor=PT30S
+io.redintro.scheduling.lock.atMostFor=PT30S
+io.redintro.scheduling.lock.nameSpace=hexbike
 
 spring.liquibase.enabled=false
 
