--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Demo ports and adapters project</description>
 
 	<properties>
+		<archunit.version>0.15.0</archunit.version>
 		<java.version>11</java.version>
 		<jacoco.version>0.8.5</jacoco.version>
 		<jacoco.branch.coverage.threshold>100%</jacoco.branch.coverage.threshold>
@@ -133,6 +134,16 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.tngtech.archunit</groupId>
+			<artifactId>archunit</artifactId>
+			<version>${archunit.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.tngtech.archunit</groupId>
+			<artifactId>archunit-junit5</artifactId>
+			<version>${archunit.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.testcontainers</groupId>
