Changed liquibase to yaml format for consistency and readability

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,7 +40,7 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
     show-sql: true
   liquibase:
-    change-log: classpath:db/liquibase-changelog.xml
+    change-log: "classpath:db/db.changelog-master.yml"
   profiles:
     active: dev
   redis:
