--- a/src/test-integration/resources/application-it.yml
+++ b/src/test-integration/resources/application-it.yml
@@ -32,7 +32,7 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
   liquibase:
-    change-log: classpath:db/liquibase-changelog.xml
+    change-log: classpath:db/db.changelog-master.yml
     enabled: true
   redis:
     host: localhost
