--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<jacoco.branch.coverage.threshold>100%</jacoco.branch.coverage.threshold>
 		<jacoco.line.coverage.threshold>100%</jacoco.line.coverage.threshold>
 		<jjwt.version>0.9.1</jjwt.version>
+		<json-path.version>2.4.0</json-path.version>
 		<liquibase.core.version>3.8.7</liquibase.core.version>
 		<liquibase-maven-plugin.version>3.10.2</liquibase-maven-plugin.version>
 		<immutables.version>2.8.8</immutables.version>
@@ -135,6 +136,11 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.jayway.jsonpath</groupId>
+			<artifactId>json-path</artifactId>
+			<version>${json-path.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.tngtech.archunit</groupId>
